--- a/Device-Control-Service/src/main/resources/application.properties
+++ b/Device-Control-Service/src/main/resources/application.properties
@@ -1,8 +1,35 @@
 spring.application.name=Device-Control-Service
-server.port=8081
+server.port=8082
 #eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8180/eureka}
-spring.boot.admin.url=http://localhost:9090
-management.security.enabled=false
-spring.boot.admin.username=admin
-spring.boot.admin.password=admin123
+spring.boot.admin.client.url=http://localhost:9090
+
+management.endpoint.metrics.enabled=true
+management.endpoints.web.exposure.include=*
+
+spring.boot.admin.client.enabled=true
+spring.boot.admin.client.username=admin
+spring.boot.admin.client.password=admin123
 logging.file=target/${spring.application.name}.log
+
+logging.level.root=debug
+
+#endpoints.enabled=true
+#endpoints.actuator.enabled=true
+#endpoints.auditevents.enabled=true
+#endpoints.autoconfig.enabled=true
+#endpoints.beans.enabled=true
+#endpoints.configprops.enabled=true
+#endpoints.docs.curies.enabled=true
+#endpoints.docs.enabled=true
+#endpoints.dump.enabled=true
+#endpoints.env.enabled=true
+#endpoints.flyway.enabled=true
+#endpoints.health.enabled=true
+#endpoints.health.sensitive=true
+#endpoints.heapdump.enabled=true
+#endpoints.info.enabled=true
+#endpoints.info.sensitive=true
+#endpoints.jolokia.enabled=true
+#endpoints.logfile.enabled=true
+#endpoints.mappings.enabled=true
+#endpoints.metrics.enabled=true
