--- a/Gui-Service/src/main/resources/application.properties
+++ b/Gui-Service/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 spring.application.name=Gui-Service
 #eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8180/eureka}
-spring.boot.admin.url=http://localhost:9090
-management.security.enabled=false
-spring.boot.admin.username=admin
-spring.boot.admin.password=admin123
+spring.boot.admin.client.url=http://localhost:9090
+
+management.endpoint.metrics.enabled=true
+management.endpoints.web.exposure.include=*
+
+spring.boot.admin.client.enabled=true
+spring.boot.admin.client.username=admin
+spring.boot.admin.client.password=admin123
 logging.file=target/${spring.application.name}.log
 
+logging.level.root=info
 
 #endpoints.enabled=true
 #endpoints.actuator.enabled=true
